--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@
 ################################################################################
 
 /.vs/LuckBankSim/v16/ipch/AutoPCH/c7e6ae9186072f97
+/.vs/LuckBankSim/v16/ipch/AutoPCH
+*.opendb
