--- a/LuckBankSim/LuckBankSim.vcxproj
+++ b/LuckBankSim/LuckBankSim.vcxproj
@@ -142,23 +142,25 @@
     <ClInclude Include="BoardObjects\Edge.h" />
     <ClInclude Include="BoardObjects\Menu.h" />
     <ClInclude Include="BoardObjects\MessageBox.h" />
+    <ClInclude Include="BoardObjects\Rectangle.h" />
     <ClInclude Include="BoardObjects\Text.h" />
+    <ClInclude Include="BoardObjects\TextBox.h" />
     <ClInclude Include="Defs.h" />
     <ClInclude Include="Game.h" />
     <ClInclude Include="BoardObjects\Drawable.h" />
     <ClInclude Include="GUI.h" />
-    <ClInclude Include="Rectangle.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="BoardObjects\Dice.cpp" />
     <ClCompile Include="BoardObjects\Menu.cpp" />
+    <ClCompile Include="BoardObjects\Rectangle.cpp" />
     <ClCompile Include="BoardObjects\Text.cpp" />
+    <ClCompile Include="BoardObjects\TextBox.cpp" />
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="BoardObjects\Edge.cpp" />
     <ClCompile Include="BoardObjects\MessageBox.cpp" />
     <ClCompile Include="GUI.cpp" />
     <ClCompile Include="main.cpp" />
-    <ClCompile Include="Rectangle.cpp" />
   </ItemGroup>
   <ItemGroup>
     <Image Include="Images\7azzakSpace.png" />
