--- a/.gitignore
+++ b/.gitignore
@@ -5,9 +5,12 @@
 /.vs/LuckBankSim/v16/ipch/AutoPCH/c7e6ae9186072f97
 /.vs/LuckBankSim/v16/ipch/AutoPCH
 *.opendb
-*.vs
-*Debug
-*/LuckBankSim/Debug
-*/LuckBankSim/x64
+*.db
+*.suo
+.vs/
+Debug/
+x64/
+/LuckBankSim/Debug/
+/LuckBankSim/x64/
 
 
