--- a/LuckBankSim/LuckBankSim.vcxproj
+++ b/LuckBankSim/LuckBankSim.vcxproj
@@ -145,10 +145,15 @@
     <ClInclude Include="BoardObjects\Rectangle.h" />
     <ClInclude Include="BoardObjects\Text.h" />
     <ClInclude Include="BoardObjects\TextBox.h" />
+    <ClInclude Include="City.h" />
     <ClInclude Include="Defs.h" />
     <ClInclude Include="Game.h" />
     <ClInclude Include="BoardObjects\Drawable.h" />
     <ClInclude Include="GUI.h" />
+    <ClInclude Include="Market.h" />
+    <ClInclude Include="Parking.h" />
+    <ClInclude Include="RestArea.h" />
+    <ClInclude Include="space.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="BoardObjects\Dice.cpp" />
@@ -156,11 +161,16 @@
     <ClCompile Include="BoardObjects\Rectangle.cpp" />
     <ClCompile Include="BoardObjects\Text.cpp" />
     <ClCompile Include="BoardObjects\TextBox.cpp" />
+    <ClCompile Include="City.cpp" />
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="BoardObjects\Edge.cpp" />
     <ClCompile Include="BoardObjects\MessageBox.cpp" />
     <ClCompile Include="GUI.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="Market.cpp" />
+    <ClCompile Include="Parking.cpp" />
+    <ClCompile Include="RestArea.cpp" />
+    <ClCompile Include="space.cpp" />
   </ItemGroup>
   <ItemGroup>
     <Image Include="Images\7azzakSpace.png" />
