Num of players, Player's avatars .. etc

--- a/LuckBankSim/LuckBankSim.vcxproj
+++ b/LuckBankSim/LuckBankSim.vcxproj
@@ -142,35 +142,39 @@
     <ClInclude Include="BoardObjects\Edge.h" />
     <ClInclude Include="BoardObjects\Menu.h" />
     <ClInclude Include="BoardObjects\MessageBox.h" />
+    <ClInclude Include="BoardObjects\Player.h" />
+    <ClInclude Include="BoardObjects\PlayerData.h" />
     <ClInclude Include="BoardObjects\Rectangle.h" />
     <ClInclude Include="BoardObjects\Text.h" />
     <ClInclude Include="BoardObjects\TextBox.h" />
-    <ClInclude Include="City.h" />
     <ClInclude Include="Defs.h" />
     <ClInclude Include="Game.h" />
     <ClInclude Include="BoardObjects\Drawable.h" />
     <ClInclude Include="GUI.h" />
-    <ClInclude Include="Market.h" />
-    <ClInclude Include="Parking.h" />
-    <ClInclude Include="RestArea.h" />
-    <ClInclude Include="space.h" />
+    <ClInclude Include="spaces\City.h" />
+    <ClInclude Include="spaces\Market.h" />
+    <ClInclude Include="spaces\Parking.h" />
+    <ClInclude Include="spaces\RestArea.h" />
+    <ClInclude Include="spaces\space.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="BoardObjects\Dice.cpp" />
     <ClCompile Include="BoardObjects\Menu.cpp" />
+    <ClCompile Include="BoardObjects\Player.cpp" />
+    <ClCompile Include="BoardObjects\PlayerData.cpp" />
     <ClCompile Include="BoardObjects\Rectangle.cpp" />
     <ClCompile Include="BoardObjects\Text.cpp" />
     <ClCompile Include="BoardObjects\TextBox.cpp" />
-    <ClCompile Include="City.cpp" />
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="BoardObjects\Edge.cpp" />
     <ClCompile Include="BoardObjects\MessageBox.cpp" />
     <ClCompile Include="GUI.cpp" />
     <ClCompile Include="main.cpp" />
-    <ClCompile Include="Market.cpp" />
-    <ClCompile Include="Parking.cpp" />
-    <ClCompile Include="RestArea.cpp" />
-    <ClCompile Include="space.cpp" />
+    <ClCompile Include="spaces\City.cpp" />
+    <ClCompile Include="spaces\Market.cpp" />
+    <ClCompile Include="spaces\Parking.cpp" />
+    <ClCompile Include="spaces\RestArea.cpp" />
+    <ClCompile Include="spaces\space.cpp" />
   </ItemGroup>
   <ItemGroup>
     <Image Include="Images\7azzakSpace.png" />
