--- a/LuckBankSim/LuckBankSim.vcxproj.filters
+++ b/LuckBankSim/LuckBankSim.vcxproj.filters
@@ -1,169 +1,2 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <ItemGroup>
-    <ClCompile Include="GUI.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="Game.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="BoardObjects\Edge.cpp">
-      <Filter>Source Files\BoardObjects</Filter>
-    </ClCompile>
-    <ClCompile Include="BoardObjects\MessageBox.cpp">
-      <Filter>Source Files\BoardObjects</Filter>
-    </ClCompile>
-    <ClCompile Include="BoardObjects\Dice.cpp">
-      <Filter>Source Files\BoardObjects</Filter>
-    </ClCompile>
-    <ClCompile Include="BoardObjects\Menu.cpp">
-      <Filter>Source Files\BoardObjects</Filter>
-    </ClCompile>
-    <ClCompile Include="main.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="BoardObjects\Text.cpp">
-      <Filter>Source Files\BoardObjects</Filter>
-    </ClCompile>
-    <ClCompile Include="BoardObjects\Rectangle.cpp">
-      <Filter>Source Files\BoardObjects</Filter>
-    </ClCompile>
-    <ClCompile Include="BoardObjects\TextBox.cpp">
-      <Filter>Source Files\BoardObjects</Filter>
-    </ClCompile>
-    <ClCompile Include="BoardObjects\Player.cpp">
-      <Filter>Source Files\BoardObjects</Filter>
-    </ClCompile>
-    <ClCompile Include="spaces\City.cpp">
-      <Filter>Source Files\Spaces</Filter>
-    </ClCompile>
-    <ClCompile Include="spaces\Parking.cpp">
-      <Filter>Source Files\Spaces</Filter>
-    </ClCompile>
-    <ClCompile Include="spaces\RestArea.cpp">
-      <Filter>Source Files\Spaces</Filter>
-    </ClCompile>
-    <ClCompile Include="spaces\space.cpp">
-      <Filter>Source Files\Spaces</Filter>
-    </ClCompile>
-    <ClCompile Include="spaces\Market.cpp">
-      <Filter>Source Files\Spaces</Filter>
-    </ClCompile>
-    <ClCompile Include="BoardObjects\PlayerData.cpp">
-      <Filter>Source Files\BoardObjects</Filter>
-    </ClCompile>
-    <ClCompile Include="BoardObjects\DrawCity.cpp">
-      <Filter>Source Files\BoardObjects</Filter>
-    </ClCompile>
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="BoardObjects\Drawable.h">
-      <Filter>Header Files\BoardObjects</Filter>
-    </ClInclude>
-    <ClInclude Include="Game.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="Defs.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="GUI.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="BoardObjects\MessageBox.h">
-      <Filter>Header Files\BoardObjects</Filter>
-    </ClInclude>
-    <ClInclude Include="BoardObjects\Edge.h">
-      <Filter>Header Files\BoardObjects</Filter>
-    </ClInclude>
-    <ClInclude Include="BoardObjects\Dice.h">
-      <Filter>Header Files\BoardObjects</Filter>
-    </ClInclude>
-    <ClInclude Include="BoardObjects\Menu.h">
-      <Filter>Header Files\BoardObjects</Filter>
-    </ClInclude>
-    <ClInclude Include="BoardObjects\Text.h">
-      <Filter>Header Files\BoardObjects</Filter>
-    </ClInclude>
-    <ClInclude Include="BoardObjects\Rectangle.h">
-      <Filter>Header Files\BoardObjects</Filter>
-    </ClInclude>
-    <ClInclude Include="BoardObjects\TextBox.h">
-      <Filter>Header Files\BoardObjects</Filter>
-    </ClInclude>
-    <ClInclude Include="BoardObjects\Player.h">
-      <Filter>Header Files\BoardObjects</Filter>
-    </ClInclude>
-    <ClInclude Include="spaces\City.h">
-      <Filter>Header Files\spaces</Filter>
-    </ClInclude>
-    <ClInclude Include="spaces\Market.h">
-      <Filter>Header Files\spaces</Filter>
-    </ClInclude>
-    <ClInclude Include="spaces\Parking.h">
-      <Filter>Header Files\spaces</Filter>
-    </ClInclude>
-    <ClInclude Include="spaces\RestArea.h">
-      <Filter>Header Files\spaces</Filter>
-    </ClInclude>
-    <ClInclude Include="spaces\space.h">
-      <Filter>Header Files\spaces</Filter>
-    </ClInclude>
-    <ClInclude Include="BoardObjects\PlayerData.h">
-      <Filter>Header Files\BoardObjects</Filter>
-    </ClInclude>
-    <ClInclude Include="BoardObjects\DrawCity.h">
-      <Filter>Header Files\BoardObjects</Filter>
-    </ClInclude>
-  </ItemGroup>
-  <ItemGroup>
-    <Image Include="Images\luck1.png">
-      <Filter>Images</Filter>
-    </Image>
-    <Image Include="Images\logo.png">
-      <Filter>Images</Filter>
-    </Image>
-    <Image Include="Images\7azzakSpace.png">
-      <Filter>Images</Filter>
-    </Image>
-    <Image Include="Images\close.png">
-      <Filter>Images</Filter>
-    </Image>
-    <Image Include="Images\playImage.png">
-      <Filter>Images</Filter>
-    </Image>
-  </ItemGroup>
-  <ItemGroup>
-    <Filter Include="Header Files">
-      <UniqueIdentifier>{0d5f141c-e22b-4344-be26-51632cf63036}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Source Files">
-      <UniqueIdentifier>{fe8b6df7-2ba5-4e16-a339-d0c3f451e86e}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Resource Files">
-      <UniqueIdentifier>{a14ca9c4-264e-47aa-99fc-3118b6e6b321}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Header Files\BoardObjects">
-      <UniqueIdentifier>{6e83cbaf-3a5c-47d3-96c3-3fd480176a1b}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Source Files\BoardObjects">
-      <UniqueIdentifier>{fc9f77dd-594e-4b87-905a-95895806e32a}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Images">
-      <UniqueIdentifier>{216f0ae8-feb9-48a3-903d-216b305cb6dc}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Fonts">
-      <UniqueIdentifier>{a01d27ba-9721-4c4f-aec4-92f36616bc30}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Header Files\spaces">
-      <UniqueIdentifier>{433f959e-11d1-4189-909c-d22732b14dce}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Source Files\Spaces">
-      <UniqueIdentifier>{e4cef8bd-3963-4ffc-9b68-4b488b2df053}</UniqueIdentifier>
-    </Filter>
-  </ItemGroup>
-  <ItemGroup>
-    <Font Include="Fonts\arial.ttf">
-      <Filter>Fonts</Filter>
-    </Font>
-  </ItemGroup>
-</Project>
+<Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003" />
