--- a/LuckBankSim/LuckBankSim.vcxproj
+++ b/LuckBankSim/LuckBankSim.vcxproj
@@ -83,7 +83,7 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <AdditionalLibraryDirectories>SFML-2.5.1\lib</AdditionalLibraryDirectories>
-      <AdditionalDependencies>sfml-graphics-s-d.lib;sfml-window-s-d.lib;sfml-system-s-d.lib;winmm.lib;opengl32.lib;freetype.lib;gdi32.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>sfml-graphics-s-d.lib;sfml-window-s-d.lib;sfml-system-s-d.lib;sfml-audio-s-d.lib;openal32.lib;flac.lib;vorbisenc.lib;vorbisfile.lib;vorbis.lib;ogg.lib	;winmm.lib;opengl32.lib;freetype.lib;gdi32.lib;kernel32.lib;user32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
@@ -144,6 +144,7 @@
     <ClInclude Include="BoardObjects\Edge.h" />
     <ClInclude Include="BoardObjects\Menu.h" />
     <ClInclude Include="BoardObjects\MessageBox.h" />
+    <ClInclude Include="BoardObjects\MessageBox2.h" />
     <ClInclude Include="BoardObjects\Player.h" />
     <ClInclude Include="BoardObjects\PlayerData.h" />
     <ClInclude Include="BoardObjects\Rectangle.h" />
@@ -169,6 +170,7 @@
     <ClCompile Include="BoardObjects\Dice.cpp" />
     <ClCompile Include="BoardObjects\DrawCity.cpp" />
     <ClCompile Include="BoardObjects\Menu.cpp" />
+    <ClCompile Include="BoardObjects\MessageBox2.cpp" />
     <ClCompile Include="BoardObjects\Player.cpp" />
     <ClCompile Include="BoardObjects\PlayerData.cpp" />
     <ClCompile Include="BoardObjects\Rectangle.cpp" />
